--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ body{
     margin-bottom: 3%;
 
 }
+.card-deck .single-card .number{
+    background: rgb(121, 1, 95);
+    color: #fff;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    text-align: center;
+    padding-top: 2%;
+    margin-left: -32px;
+    margin-top: -30px;
+    font-size: 17px;
+}
 
 .card-deck .single-card .card-title, .card-text{
     color: #444 !important;
@@ -51,7 +63,16 @@ body{
     margin-right: 10%;
 }
 .read-more button{
-    background: rgb(97, 1, 76);
+    background: rgb(121, 1, 95);
+    color: #fff !important;
+    padding: 1% 2% !important;
+    border: none !important;
+    text-align: center;
+    width: 100% !important;
+    border-radius: 0%;
+    cursor: pointer;
+}
+.read-more a{
     color: #fff !important;
     padding: 1% 2% !important;
     border: none !important;
@@ -65,6 +86,39 @@ body{
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 300px;
+}
+
+/* single page post design */
+.single-page-title{
+    color: rgb(97, 1, 76);
+    text-align: center;
+    margin-top: 5%;
+    font-weight: 700;
+}
+.single-post{
+    width: 100%;
+    background: #fff;
+    padding: 5%;
+    border: 1px solid rgb(235, 227, 227);
+    margin-top: 5%;
+    box-shadow: 0 3px 5px 1px rgb(175, 173, 173);
+    background: rgb(97, 1, 76);
+}
+.single-post h3,p{
+    color: #fff !important;
+}
+.single-page-title{
+    color: rgb(97, 1, 76);
+    margin-left: 2%;
+}
+.single-page-paragraph{
+    color: #444 !important;
+}
+.fa-arrow-circle-left{
+    color: rgb(97, 1, 76);
+    font-size: 50px;
+    display: inline-block;
+    margin-top: 4.4%;
 }
 
 @media only screen and (max-width: 1024px){
