--- a/style.css
+++ b/style.css
@@ -5,15 +5,25 @@ body{
 }
 
 .header{
-    background: linear-gradient(rgb(143, 3, 101), rgba(95, 148, 247, 0.8)),url('image/blog.jpg') center center no-repeat ;
+    background: linear-gradient(rgb(117, 0, 92), rgba(29, 108, 253, 0.8)),url('image/blog.jpg') center center no-repeat ;
     height: 50vh;
     background-size: cover;
     text-align: center;
     justify-content: center;
-    padding-top: 8%;
+    padding-top: -4% !important;
+    flex-direction: column !important;
+}
+.header h1{
+    margin-top: -4%;
 }
 .header h1,p{
-    color: #fff;
+    color: #fff !important;
+}
+.filter{
+    margin-top: 1%;
+    width: 540px;
+    padding: 0.3% 1%;
+    border: 2px solid rgb(24, 3, 141);
 }
 .container{
     width: 90%;
@@ -22,12 +32,12 @@ body{
 
 }
 .card-deck{
-    margin-top: 3%;
+    margin-top: -2%;
+    margin-bottom: 10% !important;
 }
-.card-deck .single-card{
+.card-deck .post{
     
     width: 350px;
-    /* height: 198px; */
     background: #fff !important;
     border: 1px solid rgb(224, 224, 224);
     margin-left: 2%;
@@ -35,8 +45,16 @@ body{
     margin-bottom: 3%;
 
 }
-.card-deck .single-card .number{
-    background: rgb(121, 1, 95);
+.post{
+    width: 350px;
+    background: #fff !important;
+    border: 1px solid rgb(224, 224, 224);
+    margin-left: 2%;
+    box-shadow: 0 3px 5px 1px rgb(202, 191, 191) !important;
+    margin-bottom: 3%;
+}
+.card-deck .post .number{
+    background: rgb(92, 0, 72);
     color: #fff;
     height: 40px;
     width: 40px;
@@ -48,90 +66,197 @@ body{
     font-size: 17px;
 }
 
-.card-deck .single-card .card-title, .card-text{
+.card-deck .post .card-title, .card-text{
     color: #444 !important;
    
 }
-.card-deck .single-card .card-title{
+.card-title{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    /* max-width: 170px; */
+    max-width: 170px; 
     justify-content: center;
     text-align: center !important;
-    margin-left: 10%;
+    margin-left: 22%;
     margin-right: 10%;
 }
 .read-more button{
-    background: rgb(121, 1, 95);
+    background: rgb(109, 8, 87);
     color: #fff !important;
     padding: 1% 2% !important;
-    border: none !important;
+    border: 1px solid rgb(77, 1, 60) !important;
     text-align: center;
     width: 100% !important;
     border-radius: 0%;
     cursor: pointer;
+
 }
 .read-more a{
     color: #fff !important;
     padding: 1% 2% !important;
-    border: none !important;
+    border: 1px solid rgba(29, 108, 253, 0.8) !important;
     text-align: center;
     width: 100% !important;
     border-radius: 0%;
     cursor: pointer;
 }
-.card-deck .single-card .card-text{
+.card-deck .post .card-text{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 300px;
 }
 
+/* loader */
+.loader{
+    opacity: 0;
+    display: flex; 
+    position: fixed;
+    bottom: 50px;
+    transition: opacity 0.3s ease-in;
+    margin-top: 3%;
+    margin-bottom: 1%;
+    margin-left: 40%;
+}
+.loader.show{
+    opacity: 1;
+}
+.circle{
+    background-color: rgb(92, 0, 72);
+    width: 10px; 
+    height: 10px;
+    border-radius: 50%;
+    margin: 5px;
+    animation: bounce 0.5s ease-in infinite;
+}
+.circle:nth-of-type(2){
+    animation-delay: 0.1s;
+}
+.circle:nth-of-type(3){
+    animation-delay: 0.2s;
+}
+@keyframes bounce{
+    0%,
+    100%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(-10px);
+    }
+}
+/* loader */
+
 /* single page post design */
 .single-page-title{
-    color: rgb(97, 1, 76);
+    color: rgb(92, 0, 72);
     text-align: center;
-    margin-top: 5%;
+    margin-top: -3% !important;
     font-weight: 700;
+    display: inline-block;
+    margin-left: 3% !important;
 }
-.single-post{
-    width: 100%;
+.single-post, .comments, .response{
+    width: 90%;
     background: #fff;
-    padding: 5%;
     border: 1px solid rgb(235, 227, 227);
-    margin-top: 5%;
     box-shadow: 0 3px 5px 1px rgb(175, 173, 173);
-    background: rgb(97, 1, 76);
+    background: #fff;
+    flex-direction: column;
+    margin-left: 5%;
 }
-.single-post h3,p{
-    color: #fff !important;
+.response{
+    margin-top: 2%;
+    padding: 2% 5%;
+}
+
+.response textarea{
+    width: 100%;
+    border: 2px solid rgb(245, 230, 230);
+    padding-left: 15px;
+}
+.response button{
+    background: rgb(92, 0, 72);
+    color: #fff;
+    margin-top: 0.5%;
+    padding: 0.3% 1.4%;
+    border: 1.5px solid rgb(70, 2, 55);
+}
+
+.single-post{
+    margin-top: 5%;
+    padding: 5%;
+}
+.comments{
+    margin-top: 1.5%;
+    flex-direction: column;
+    padding: 0% 5%;
+}
+.comments-paragraph{
+    color: #444 !important;
+    display: flex;
+    flex-direction: column;
+}
+.comments-name{
+    color: rgb(92, 0, 72) !important;
+    font-size: 20px !important;
+}
+.comments-email{
+    color: rgb(14, 29, 226) !important;
+}
+.all-comments{
+    flex-direction: column;
+}
+.single-post h3{
+    color: rgb(92, 0, 72) !important;
+    margin-top: -4.5%;
+   
+}
+.single-post h3{
+    color: rgb(92, 0, 72);
 }
 .single-page-title{
-    color: rgb(97, 1, 76);
+    color: rgb(92, 0, 72);
     margin-left: 2%;
 }
 .single-page-paragraph{
     color: #444 !important;
 }
 .fa-arrow-circle-left{
-    color: rgb(97, 1, 76);
-    font-size: 50px;
+    font-size: 40px;
+    color: rgb(92, 0, 72);
+    height: 30px;
+    width: 80px;;
     display: inline-block;
-    margin-top: 4.4%;
+}
+#comments{
+    background: rgb(92, 0, 72) !important;
+    color: #fff !important;
 }
 
+
+
 @media only screen and (max-width: 1024px){
-    .card-deck .single-card{
+    .card-deck .post{
         width: 290px;
         margin-left: 2.3%;
     }
 }
 
 @media only screen and (max-width: 768px){
-    .card-deck .single-card{
+    .card-deck .post{
         width: 315px;
         margin-left: 4%;
+    }
+    .single-page-title{
+        display: inline-block;
+        margin-left: 7% !important;
+        font-size: 22px;
+    }
+    .fa-arrow-circle-left{
+        font-size: 40px;
+        color: rgb(92, 0, 72);
+        display: inline-block;
     }
 }
 
@@ -143,28 +268,75 @@ body{
     .header p{
         font-size: 14px;
     }
-    .card-deck .single-card{
+    .filter{
+        width: 270px;
+    }
+    .card-deck .post{
         width: 355px;
         margin-left: 5%;
-        margin-top: 3.5%;
+        margin-top: 2.5%;
     }
-    .card-deck .single-card .card-title{
+    .card-deck .post .card-title{
         font-size: 16px;
     }
-    .card-deck .single-card .card-text{
+    .card-deck .post .card-text{
         font-size: 14px;
     }
+    .single-post, .comments, .response{
+        width: 98%;
+        background: #fff;
+        border: 1px solid rgb(235, 227, 227);
+        box-shadow: 0 3px 5px 1px rgb(175, 173, 173);
+        background: #fff;
+        flex-direction: column;
+        margin-left: 1%;
+    }
+    .single-page-title{
+        display: inline-block;
+        margin-left: 7% !important;
+        margin-top: 7% !important;
+        font-size: 20px;
+        font-weight: 500 !important;
+    }
+    .single-page-paragraph{
+        text-align: justify !important;
+    }
+    .single-post{
+        padding: -5% 6%;
+    }
+    .loader{
+        bottom: 50px;
+        margin-top: 23% !important;
+        margin-bottom: 1%;
+        margin-left: 40%;
+    }
+    .comments-paragraph{
+        color: #444 !important;
+        font-size: small;
+    }
+    .comments-email{
+        color: blue;
+        font-size: small;
+    }
+    .comments-name{
+        color: rgb(92, 0, 72) !important;
+        font-size: medium !important;
+    }
+   
 }
 
 @media only screen and (max-width: 375px){
-    .card-deck .single-card{
+    .card-deck .post{
         width: 330px;
         margin-left: 2.4%;
+    }
+    .single-page-paragraph{
+        font-size: medium;
     }
 }
 
 @media only screen and (max-width: 320px){
-    .card-deck .single-card{
+    .card-deck .post{
         width: 280px;
         margin-left: 2%;
     }
